spacing fix

--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -1,5 +1,5 @@
 .mission{
-    margin: 100px auto 0px;
+    margin: 80px auto 0px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -39,6 +39,7 @@
   @media (max-width: 1000px){
     .mission{
         flex-direction: column;
+        margin-top: 60px;
     }
     .mission-left{
         margin-top: 40px;
