--- a/src/components/Positions/Positions.css
+++ b/src/components/Positions/Positions.css
@@ -62,6 +62,7 @@
     @media (max-width: 1000px){
         .positions{
             flex-wrap: wrap;
+            margin-bottom: 70px;
         }
         .position{
             width: 48%;
